html pages + sass

--- a/index.html
+++ b/index.html
@@ -21,11 +21,21 @@
         <div class="navigation__background">&nbsp;</div>
         <nav class="navigation__nav">
             <ul class="navigation__list">
-                <li class="navigation__item"><a href="#" class="navigation__link">About Us</a></li>
-                <li class="navigation__item"><a href="#" class="navigation__link">Your Benefits</a></li>
-                <li class="navigation__item"><a href="#" class="navigation__link">Popular Tours</a></li>
-                <li class="navigation__item"><a href="#" class="navigation__link"><span>04</span>Stories</a></li>
-                <li class="navigation__item"><a href="#" class="navigation__link">Book now</a></li>
+                    <li class="navigation__item">
+                            <a href="/index.html" class="navigation__link">Home</a>
+                          </li>
+                          <li class="navigation__item">
+                            <a href="/about.html" class="navigation__link">About Us</a>
+                          </li>
+                          <li class="navigation__item">
+                            <a href="/events.html" class="navigation__link">Events</a>
+                          </li>
+                          <li class="navigation__item">
+                            <a href="/menu.html" class="navigation__link">Menu</a>
+                          </li>
+                          <li class="navigation__item">
+                            <a href="/menu.html" class="navigation__link">Contacts</a>
+                          </li>
             </ul>
         </nav>
     </div>
